# Motor

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  imgui.ini  main.cpp  vcpkg.json
Ao_Yunqian_Hernandez_Vazquez_Pau_Delivery2/Release/: README.md  imgui.ini
Ao_Yunqian_Hernandez_Vazquez_Pau_Delivery2/Release/Assets/Scenes/: scene.m2scene
Ao_Yunqian_Hernandez_Vazquez_Pau_Delivery2/Release/Licencias/: LICENSE.md
Assets/: street.fbx
Assets/Primitives/: Cone.fbx  Cube.fbx  Cylinder.fbx
MotorA2/: .gitignore  CMakeLists.txt  CMakePresets.json  imgui.ini  vcpkg.json
MotorA2/Assets/Scenes/: scene.m2scene
MotorA2/Source/: main.cpp
MotorA2/Source/Core/: Frustum.h  GameObject.cpp  GameObject.h  Logger.h  SceneIO.cpp  SceneIO.h  Transform.cpp  Transform.h
MotorA2/Source/Editor/: Camera.cpp  Camera.h  EditorWindows.cpp  EditorWindows.h
MotorA2/Source/Renderer/: MeshImporter.cpp  MeshImporter.h  ModelLoader.cpp  ModelLoader.h  TextureLoader.cpp  TextureStubs.cpp
glut_simple_example/: imgui.ini
glut_simple_example/glut_simple_example/: AABB.h  Camera.cpp  Camera.h  EditorWindows.cpp  EditorWindows.h  Frustum.h  GameObject.cpp  GameObject.h  Logger.cpp  Logger.h  Mesh.cpp  Mesh.h  ModelLoader.cpp  ModelLoader.h  TextureLoader.cpp  TextureLoader.h  Transform.cpp  Transform.h  glut_simple_example.vcxproj  glut_simple_example.vcxproj.filters  imgui.ini  main.cpp
glut_simple_example/glut_simple_example/backends/imgui/: imgui_impl_sdl3.cpp
src/: AABB.h  AssetDatabase.cpp  AssetDatabase.h  AssetMeta.cpp  AssetMeta.h  Camera.cpp  Camera.h  EditorWindows.cpp  EditorWindows.h  Framebuffer.cpp  Framebuffer.h  GameObject.cpp  GameObject.h  Mesh.h  ModelLoader.cpp  Octree.cpp  Octree.h  SceneSerializer.cpp  SceneSerializer.h  TextureLoader.cpp  TextureLoader.h  Transform.cpp  Transform.h  main.cpp  types.h
